tests/errors/index_out_of_scope.x
my_table = {1, 2, 3; 4, 5, 6}

index = 3

write my_table[index, 0]